# Epitech

TEK1/Minishell/: Makefile
TEK1/MyRPG/: Makefile  map
TEK2/208dowels/: 208dowels
TEK2/209poll/: 209poll
TEK2/Assembleur/: Makefile  memcpy.asm  memmove.asm  memset.asm  strcasecmp.asm  strchr.asm  strcmp.asm  strcspn.asm  strlen.asm  strncmp.asm  strpbrk.asm  strrchr.asm  strstr.asm
TEK2/Ftrace/: Makefile
TEK2/MyTeams/: Makefile
TEK2/Panoramix/: Makefile
TEK2/Plazza/: Makefile  condition_variable.cpp  cook.cpp  kitchen.cpp  kitchen_status.cpp  log_file.cpp  main.cpp  mutex.cpp  pizzas.cpp  reception.cpp  reception_backprocess.cpp  reception_data.cpp  thread.cpp  utils.cpp
TEK2/Rush3/: GraphicalMode.cpp  GraphicalMode.hpp  IMonitorDisplay.hpp  IMonitorModule.hpp  Informations.cpp  Informations.hpp  Makefile  TextMode.cpp  TextMode.hpp  main.cpp
TEK2/Strace/: Makefile  get_str_arg.c  main.c  parse_arguments.c  print_arg.c  print_syscall_args.c  strace.h  syscalls_entries.h  (+2 more)
TEK3/RType/: CMakeLists.txt  Doxyfile  RFC.md  Readme.md
TEK3/RType/client/: CMakeLists.txt  Client.cpp  Client.hpp  ClientComponents.hpp  ClientSystems.cpp  ClientSystems.hpp  Render.cpp  Render.hpp  TimedEvents.cpp  TimedEvents.hpp  doc-config  main.cpp
TEK3/RType/client/assets/: loadfonts.conf  loadtextures.conf
TEK3/RType/client/html/: Components_8hpp.html  Components_8hpp__dep__incl.map  Components_8hpp__dep__incl.md5  Components_8hpp_source.html  EPacket_8hpp.html  EPacket_8hpp__dep__incl.map  EPacket_8hpp_source.html  Entity_8cpp.html  Entity_8cpp__incl.md5  Entity_8hpp.html  Entity_8hpp__dep__incl.map  Entity_8hpp__dep__incl.md5  Entity_8hpp__incl.map  Entity_8hpp_source.html  GenericPacket_8hpp.html  GenericPacket_8hpp__dep__incl.map  GenericPacket_8hpp__dep__incl.md5  GenericPacket_8hpp__incl.map  GenericPacket_8hpp_source.html  IPacket_8hpp.html  IPacket_8hpp__dep__incl.map  IPacket_8hpp__dep__incl.md5  IPacket_8hpp__incl.map  IPacket_8hpp__incl.md5  IPacket_8hpp_source.html  IdGenerator_8cpp.html  IdGenerator_8hpp.html  IdGenerator_8hpp__dep__incl.map  IdGenerator_8hpp_source.html  NetworkClient_8cpp.html  NetworkClient_8cpp__incl.map  NetworkClient_8hpp.html  NetworkClient_8hpp__dep__incl.map  NetworkClient_8hpp__dep__incl.md5  NetworkClient_8hpp__incl.md5  NetworkClient_8hpp_source.html  NetworkHandler_8hpp.html  NetworkHandler_8hpp__incl.md5  NetworkHandler_8hpp_source.html  PacketsRegistry_8hpp.html  (+90 more)
TEK3/RType/client/html/search/: all_1.js  all_11.js  all_13.js  all_14.js  all_16.js  all_18.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_8.js  classes_9.js  classes_a.js  enumvalues_1.js  enumvalues_4.js  enumvalues_7.js  files_0.js  files_3.js  files_6.js  functions_0.js  functions_10.js  functions_11.js  functions_2.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_b.js  functions_d.js  namespaces_1.js  (+10 more)
TEK3/RType/client/network/: Network.cpp  Network.hpp  PacketCallbacks.cpp  PacketCallbacks.hpp
TEK3/RType/client/src/: Loader.cpp  Loader.hpp  Menu.hpp
TEK3/RType/client/src/FontLoader/: ParseFont.hpp
TEK3/RType/client/src/PlayerSprite/: playerSprite.cpp  playerSprite.hpp
TEK3/RType/server/: CMakeLists.txt  Server.cpp  Server.hpp  ServerComponents.hpp  ServerSystems.cpp  ServerSystems.hpp  TimedEvents.cpp  TimedEvents.hpp  doc-config  main.cpp
TEK3/RType/server/html/: Components_8hpp.html  Components_8hpp__incl.map  Components_8hpp__incl.md5  Components_8hpp_source.html  EPacket_8hpp.html  EPacket_8hpp__dep__incl.md5  EPacket_8hpp_source.html  Entity_8cpp.html  Entity_8cpp__incl.map  Entity_8hpp.html  Entity_8hpp__incl.md5  Entity_8hpp_source.html  GenericPacket_8hpp.html  GenericPacket_8hpp__incl.md5  GenericPacket_8hpp_source.html  IPacket_8hpp.html  IPacket_8hpp_source.html  IdGenerator_8cpp.html  IdGenerator_8cpp__incl.map  IdGenerator_8cpp__incl.md5  IdGenerator_8hpp.html  IdGenerator_8hpp__dep__incl.md5  IdGenerator_8hpp__incl.map  IdGenerator_8hpp__incl.md5  IdGenerator_8hpp_source.html  NetworkClient_8cpp.html  NetworkClient_8cpp__incl.md5  NetworkClient_8hpp.html  NetworkClient_8hpp__incl.map  NetworkClient_8hpp_source.html  NetworkHandler_8hpp.html  NetworkHandler_8hpp__incl.map  NetworkHandler_8hpp_source.html  Network_8cpp.html  Network_8cpp__incl.map  Network_8cpp__incl.md5  Network_8hpp.html  Network_8hpp__dep__incl.map  Network_8hpp__dep__incl.md5  Network_8hpp__incl.map  (+151 more)
TEK3/RType/server/html/search/: all_0.js  all_10.js  all_12.js  all_15.js  all_17.js  all_2.js  all_3.js  all_7.js  all_9.js  classes_0.js  classes_4.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  files_1.js  files_2.js  files_4.js  files_5.js  files_7.js  functions_1.js  functions_12.js  functions_3.js  functions_5.js  functions_9.js  functions_a.js  functions_c.js  functions_e.js  functions_f.js  namespaces_0.js  namespaces_2.js  typedefs_3.js  variables_0.js  variables_2.js  variables_4.js  variables_5.js  (+2 more)
TEK3/RType/server/network/: Network.cpp  Network.hpp  PacketCallbacks.cpp  PacketCallbacks.hpp
TEK3/RType/shared/: Components.hpp  Entity.cpp  Entity.hpp  Registry.hpp  SparseArray.hpp  Systems.cpp  Systems.hpp
TEK3/RType/shared/network/: NetworkClient.cpp  NetworkClient.hpp  NetworkHandler.hpp  PacketsRegistry.hpp
TEK3/RType/shared/network/packet/: EPacket.hpp  GenericPacket.hpp  IPacket.hpp
TEK3/RType/shared/network/utils/: IdGenerator.cpp  IdGenerator.hpp
(+408 files in other folders)
